--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.image.indicator"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	<uses-permission android:name="android.permission.INTERNET" />  
     <uses-sdk android:minSdkVersion="4" />
 
     <application
@@ -47,5 +47,4 @@
             android:name=".activity.MoreNews">
         </activity>
     </application>
-
 </manifest>
