--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.image.indicator"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	<uses-permission android:name="android.permission.INTERNET" />  
+	
     <uses-sdk android:minSdkVersion="4" />
-
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -47,5 +48,4 @@
             android:name=".activity.MoreNews">
         </activity>
     </application>
-
 </manifest>
