--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -47,5 +47,10 @@
             android:screenOrientation="portrait" 
             android:name=".activity.MoreNews">
         </activity>
+         <activity 
+            android:screenOrientation="portrait" 
+            android:name=".activity.TabFollowActivity">
+        </activity>
+        
     </application>
 </manifest>
