显示访谈嘉宾列表

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,9 @@
             android:screenOrientation="portrait" 
             android:name=".activity.TabFollowActivity">
         </activity>
-        
+        <activity 
+            android:screenOrientation="portrait" 
+            android:name=".activity.RadioGuestActivity">
+        </activity>
     </application>
 </manifest>
